[package]
name = "tmplr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
minijinja = { git = "https://github.com/mitsuhiko/minijinja.git", version = "1.0.0", features = ["loader"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"

[profile.release]
lto = true
codegen-units = 1

[package.metadata.deb]
maintainer = "Hiroaki Nakamura <hnakamur@gmail.com>"
copyright = "2023, Hiroaki Nakamura <hnakamur@gmail.com>"
license-file = ["LICENSE"]
extended-description = """\
A command line tool to expand a MiniJinja template file
using variables in a YAML file."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/x86_64-unknown-linux-musl/release/tmplr", "usr/bin/", "755"],
]
